--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ ark-ff = { version = "0.4" }
 ark-ec = { version = "0.4" }
 ark-serialize = { version = "0.4" }
 ark-bls12-381 = { version = "0.4", features = [ "curve" ] }
+ark-secp256k1 = "0.4.0"
 rand = { version = "0.8", features = [ "std", "std_rng" ] }
 num-bigint = { version = "0.4" }
 ark-crypto-primitives = "0.4.0"
