--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ sha256 = "1.1.1"
 sha2 = "0.10.6"
 hex = "0.4.3"
 criterion = "0.4"
-curve25519-dalek-ng = { version = "4.1", features = ["std", "serde"]}
+curve25519-dalek-ng = { version = "4.1", features = ["std", "simd_backend", "serde"]}
 rand_core = "0.6"
 
 [[bench]]
